# Atividade-4

./: README.md
tarefas/: pyproject.toml
tarefas/config/: settings.py  urls.py  wsgi.py
tarefas/tarefas/: pyproject.toml
tarefas/tarefas/config/: settings.py
tarefas/tarefas_app/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
tarefas/tarefas_app/migrations/: 0001_initial.py
tarefas/templates/: base.html
tarefas/templates/tarefas_app/: lista_tarefas.html
