[project]
name = "tarefas"
version = "0.1.0"
description = ""
authors = [
    {name = "higabeatriz",email = "higabeatriz@gmail.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=4.1.0,<4.2.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
